Bad use of internal API.